--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "cross-env": "^5.2.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
